<resources>
    <string name="app_name">TrempelApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in_title">Login to your Account</string>
    <string name="ok">OK</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="ready_for_the_shopping">Ready for the shopping?</string>
    <string name="visit_our_categories">Visit our Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">$%.2f</string>
    <string name="categories">Categories</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="reviews_count">(%d reviews)</string>
    <string name="undo_string">undo</string>
    <string name="undo_deletion">Undo deletion!</string>
    <string name="checkout">Checkout</string>
    <string name="items_count">Total: %d items</string>
    <string name="item_added_to_the_cart">Product has been added to the cart!</string>
    <string name="logout">Log Out</string>
    <string name="no_items_yet">No items yet</string>
    <string name="no_search_results">There are no results</string>
    <string name="close">Close</string>
    <string name="smth_went_wrong">Something went wrong</string>
    <string name="error_text">Unfortunately, we are currently having some technical problems. Please try again later.</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="on_image_saved">Your image have been saved</string>
    <string name="you_are_here">You are here</string>
    <string name="asking_for_permission">Resolve location permission in the app settings</string>
    <string name="resolve_location_permission">Resolve precise location permission</string>
    <string name="enable_gps">Enable GPS on your device</string>
    <string name="no_gps">GPS is not enabled</string>
    <string name="permission_denied">Permission hes been denied</string>
</resources>