<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.trempelapp.presentation_layer.main_screen.main_fragments.search.SearchPageFragmentViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:isRefreshing="@{viewModel.isLoadingLiveData}"
        app:layout_constraintTop_toBottomOf="@id/search_edit"
        app:onRefreshSearch="@{() -> viewModel.getFilteredListOfProducts(viewModel.queryTextLiveData)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation_layer.main_screen.main_fragments.search.SearchPageFragment">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_edit"
                style="@style/InputLayoutHomePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin24"
                android:layout_marginTop="@dimen/margin32"
                android:layout_marginEnd="@dimen/margin24"
                app:errorText="@{viewModel.errorQueryLiveData}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="@dimen/padding16"
                    android:hint="@string/what_are_you_looking_for"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:text="@={viewModel.queryTextLiveData}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result_recycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adapter="@{viewModel.adapter}"
                android:paddingStart="@dimen/padding16"
                android:paddingEnd="@dimen/padding16"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_edit"
                app:spanCount="2" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/empty_list_style"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin136"
                android:drawableTop="@drawable/ic_empty_search"
                android:text="@string/no_search_results"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_edit"
                app:searchResultVisibility="@{viewModel.isSearchEmptyLiveData}" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/empty_list_style"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:drawableTop="@drawable/ic_empty_search"
                android:paddingTop="@dimen/margin136"
                android:text="@string/smth_went_wrong"
                app:isErrorVisible="@{viewModel.isErrorLiveData}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_edit" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>