<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.trempelapp.presentation_layer.logIn_screen.TrempelLogInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".presentation_layer.logIn_screen.TrempelLogInActivity">

        <ImageView
            android:id="@+id/log_in_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_log_in_image"
            app:layout_constraintBottom_toTopOf="@id/container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <View
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_rounded_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_in_image" />

        <TextView
            android:id="@+id/log_in_title"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin32"
            android:layout_marginTop="@dimen/margin48"
            android:layout_marginEnd="@dimen/margin32"
            android:onClickListener="@{viewModel::setLoginDataForDebug}"
            android:text="@string/log_in_title"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_in_edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin32"
            android:layout_marginTop="@dimen/margin32"
            android:layout_marginEnd="@dimen/margin32"
            app:errorText="@{viewModel.errorLoginEditLiveData}"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/log_in_title">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditFieldStyle"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:text="@={viewModel.editLoginTextLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin32"
            android:layout_marginTop="@dimen/margin24"
            android:layout_marginEnd="@dimen/margin32"
            app:errorEnabled="true"
            app:errorText="@{viewModel.errorPasswordEditLiveData}"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/log_in_edit">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.editPassWordTextLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/LoginButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin32"
            android:layout_marginEnd="@dimen/margin32"
            android:onClick="@{() -> viewModel.onClickLoginButton()}"
            android:text="@string/login"
            android:enabled="@{!viewModel.isLoadingLiveData}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:setVisibility="@{viewModel.isLoadingLiveData}"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/container"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>